# content-autoupdate

./: .gitignore  README.md  pyproject.toml
content_autoupdate/: .env.example  __main__.py  archives.py  config.py
content_autoupdate/controllers/: requests.py  sources.py
content_autoupdate/services/: downloads.py  exceptions.py  parsers.py  posts.py
